src/_scss/style.scss
/* ... */
/* ==========================================================================
   mod-sponsors
   ========================================================================== */
.mod-sponsors{
	padding:30px 20px;
	margin:0 0 20px;
	background:url(../img/mod-sponsors/bg_01_top.png) no-repeat, url(../img/mod-sponsors/bg_01_btm.png) no-repeat 0 100%;
	position:relative;
	z-index:2;
	.no-multiplebgs &{
		padding-top:42px;
		top: -20px;
	}
	&:before{
		content:'';
		display:block;
		position:absolute;
		z-index:-1;
		left:0;
		right:0;
		top:22px;
		bottom:22px;
		background:#fff;
	}
	&:after{}
	.mod-sponsors-header{
		display: table;
		width:310px;
		margin:-20px -20px 10px;
		h1{
			font-size:100%;
			vertical-align: middle;
			display: table-cell;
			*display:inline;
			*zoom:1;
			margin:0;
		}
	}
	.mod-sponsors-eyecatch{
		vertical-align: middle;
		display: table-cell;
		*display:inline;
		*zoom:1;
		width:1%;
		padding:0 15px 0 0;
		img{
			display: block;
		}
	}
	h2{
		font-size:font-size(14);
		padding:2px 0 2px 30px;
		background:url(../img/mod-sponsors/ico_01.png) no-repeat 0 48%;
	}
	ul{
		padding:0;
		margin:0;
		list-style:none;
	}
	li{
		padding:0;
		margin: 0 0 20px;
		img{
			display:block;
			margin:0 auto;
		}
	}
}

/* ==========================================================================
   mod-twitterWedget
   ========================================================================== */
.mod-twitterWedget{
	background:#fff;
	padding:10px;
	.mod-twitterWedget-timeline{
		margin:0 0 10px;
	}
}

/* ==========================================================================
   mod-avatar
   ========================================================================== */
.mod-avatar{
	position:absolute;
	z-index: 1;
	//pointer-events:none;
	padding:0 0 0 8px;
	.mod-avatar-comment{
		font-size:font-size(12);
		line-height: 1.2;
		white-space: pre-wrap;
		line-break: strict;
		word-break: break-all;
		word-wrap: break-word;
		position:absolute;
		bottom: 80px;
		left: 10px;
		width:200px;
		padding: 0 8px;
		margin:0 0 10px;
		border-width: 8px 6px;
		-webkit-border-image: url(../img/mod-avatar/bg_01.png) 8 6 stretch;
		   -moz-border-image: url(../img/mod-avatar/bg_01.png) 8 6 stretch;
		     -o-border-image: url(../img/mod-avatar/bg_01.png) 8 6 stretch;
				border-image-source: url(../img/mod-avatar/bg_01.png);
				border-image-slice: 8 6;
				border-image-width: 8px 6px;
				border-image-outset: 8px 6px;
		background:#fff;
		.no-borderimage &{
			//no-border-radius
			border:2px solid #a9b88a;
			padding:6px 14px;
			background:#fff;
		}
		&:after{
			content:'';
			position:absolute;
			bottom:-22px;
			left:20px;
			display:block;
			width:36px;
			height: 16px;
			background:url(../img/mod-avatar/bg_02.png);
			.no-borderimage &{
				//no-border-radius
				bottom:-16px;
			}
		}
		textarea{
			font-family:inherit;
			font-size:inherit;
			line-height: 1.2;
			border: none;
			outline: none;
			resize: none;
			padding: 0;
			margin: 0;
			height: 1.2em;
			width: 202px;
		}
	}
	&.ex-avatar-me{
		.mod-avatar-comment{
			-webkit-border-image: url(../img/mod-avatar/bg_01me.png) 8 6 stretch;
			   -moz-border-image: url(../img/mod-avatar/bg_01me.png) 8 6 stretch;
			     -o-border-image: url(../img/mod-avatar/bg_01me.png) 8 6 stretch;
					border-image-source: url(../img/mod-avatar/bg_01me.png);
					border-image-slice: 8 6;
					border-image-width: 8px 6px;
					border-image-outset: 8px 6px;
			&:after{
				background:url(../img/mod-avatar/bg_02me.png);
			}
		}
	}
	&.inputMode{
		.mod-avatar-comment{
			-webkit-border-image: url(../img/mod-avatar/bg_01me_input.png) 8 6 stretch;
			   -moz-border-image: url(../img/mod-avatar/bg_01me_input.png) 8 6 stretch;
				 -o-border-image: url(../img/mod-avatar/bg_01me_input.png) 8 6 stretch;
					border-image-source: url(../img/mod-avatar/bg_01me_input.png);
					border-image-slice: 8 6;
					border-image-width: 8px 6px;
					border-image-outset: 8px 6px;
			background: #ffc8c8;
			.no-borderimage &{
				background: #ffc8c8;
			}
		}
		textarea{
			background: #ffc8c8;
		}
	}
	img{
		display:block;
		margin:0 0 0 -8px;
		// h70 * w40
	}
}

/* ==========================================================================
   mod-image
   ========================================================================== */
.mod-image {
	.mod-image-gmapLink {
		font-size: 11px;
	}
}

